cf_analysis_results/checkerframework_3.42.0_results_WPI/url647b55da7c_Nikhilkumar13_emuSr_tgz-pJ8-MainJ8.txt
warning: /home/smala009/RLF/cf-rlc/../dataset/june2020_dataset/url647b55da7c_Nikhilkumar13_emuSr_tgz-pJ8-MainJ8/wpi-out/backend/Emit-org.checkerframework.checker.mustcall.MustCallChecker.ajava:(line 3,col 1): Imported package not found: backend.InstructionSet
warning: /home/smala009/RLF/cf-rlc/../dataset/june2020_dataset/url647b55da7c_Nikhilkumar13_emuSr_tgz-pJ8-MainJ8/wpi-out/backend/instructions/LD-org.checkerframework.checker.mustcall.MustCallChecker.ajava:(line 15,col 1): Imported package not found: backend.instructions.Myfunction
../dataset/june2020_dataset/url647b55da7c_Nikhilkumar13_emuSr_tgz-pJ8-MainJ8/src/backend/ScanFile.java:101: error: (required.method.not.called) $$ 4 $$ method close $$ new RandomAccessFile(f, "r") $$ java.io.RandomAccessFile $$ possible exceptional exit due to backend.ScanFile.br.seek(mainPosition) with exception type java.io.IOException $$ ( 2743, 2771 ) $$ @MustCall method close may not have been invoked on new RandomAccessFile(f, "r") or any of its aliases.
                br = new RandomAccessFile(f, "r");
                     ^
  The type of object is: java.io.RandomAccessFile.
  Reason for going out of scope: possible exceptional exit due to backend.ScanFile.br.seek(mainPosition) with exception type java.io.IOException
../dataset/june2020_dataset/url647b55da7c_Nikhilkumar13_emuSr_tgz-pJ8-MainJ8/src/frontend/handlers.java:156: error: (required.method.not.called) $$ 4 $$ method close $$ new FileWriter(FrontEnd.filepath) $$ java.io.FileWriter $$ possible exceptional exit due to out.write(FrontEnd.activepane.getText()) with exception type java.io.IOException $$ ( 6267, 6300 ) $$ @MustCall method close may not have been invoked on new FileWriter(FrontEnd.filepath) or any of its aliases.
                    BufferedWriter out = new BufferedWriter(new FileWriter(FrontEnd.filepath));
                                                            ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to out.write(FrontEnd.activepane.getText()) with exception type java.io.IOException
../dataset/june2020_dataset/url647b55da7c_Nikhilkumar13_emuSr_tgz-pJ8-MainJ8/src/frontend/handlers.java:491: error: (required.method.not.called) $$ 4 $$ method close $$ new RandomAccessFile(fin, "r") $$ java.io.RandomAccessFile $$ possible exceptional exit due to backend.ScanFile.br.seek(0) with exception type java.io.IOException $$ ( 21050, 21080 ) $$ @MustCall method close may not have been invoked on new RandomAccessFile(fin, "r") or any of its aliases.
                    backend.ScanFile.br = new RandomAccessFile(fin, "r");
                                          ^
  The type of object is: java.io.RandomAccessFile.
  Reason for going out of scope: possible exceptional exit due to backend.ScanFile.br.seek(0) with exception type java.io.IOException
../dataset/june2020_dataset/url647b55da7c_Nikhilkumar13_emuSr_tgz-pJ8-MainJ8/src/frontend/handlers.java:548: error: (required.method.not.called) $$ 4 $$ method close $$ new RandomAccessFile(temp, "rw") $$ java.io.RandomAccessFile $$ possible exceptional exit due to backend.ScanFile.br.getFilePointer() with exception type java.io.IOException $$ ( 23977, 24009 ) $$ @MustCall method close may not have been invoked on new RandomAccessFile(temp, "rw") or any of its aliases.
                        backend.ScanFile.br = new RandomAccessFile(temp, "rw");
                                              ^
  The type of object is: java.io.RandomAccessFile.
  Reason for going out of scope: possible exceptional exit due to backend.ScanFile.br.getFilePointer() with exception type java.io.IOException
../dataset/june2020_dataset/url647b55da7c_Nikhilkumar13_emuSr_tgz-pJ8-MainJ8/src/frontend/handlers.java:659: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(file.getAbsoluteFile()) $$ java.io.FileReader $$ possible exceptional exit due to FrontEnd.activepane.read(new FileReader(file.getAbsoluteFile()), null) with exception type java.io.IOException $$ ( 28465, 28503 ) $$ @MustCall method close may not have been invoked on new FileReader(file.getAbsoluteFile()) or any of its aliases.
                FrontEnd.activepane.read(new FileReader(file.getAbsoluteFile()), null);
                                         ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to FrontEnd.activepane.read(new FileReader(file.getAbsoluteFile()), null) with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
5 errors
2 warnings
